# PEHint

./: .appveyor.yml  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  PE32FILE.cpp  PE32FILE.h  PE64FILE.cpp  PE64FILE.h  PEFILE.cpp  PEFILE.h  PEFILE_CUSTOM_STRUCTS.h  README.md  aboutwindow.cpp  aboutwindow.h  appveyor.yml  create_release_package.bat  create_release_package.ps1  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-install-script.qs  resource.qrc  update_version.py
PEHint_Release_Package/: README.md  VERSION.txt
PEHint_Release_Package/config/: explanations.json  explanations_pt.json  language_config.ini  language_config_pt.ini
PEHint_Release_Package/docs/: BUILD_GUIDE.md  DEVELOPER_GUIDE.md  INTERNATIONALIZATION.md  VERSION_MANAGEMENT.md
config/: explanations.json  explanations_pt.json  language_config.ini  language_config_pt.ini  security_config.ini
docs/: BUILD_GUIDE.md  INTERNATIONALIZATION.md  NEW_ARCHITECTURE_SUMMARY.md  REFACTORING_GUIDE.md  VERSION_MANAGEMENT.md
headers/: PE32FILE.h  PE64FILE.h  PEFILE.h  mainwindow.h  orderedmap.h  winntdef.h
resources/: app.rc  resource.qrc
src/: PE32FILE.cpp  PE64FILE.cpp  PEFILE.cpp  crash_handler.cpp  crash_handler.h  hexviewer.cpp  hexviewer.h  language_manager.cpp  language_manager.h  mainwindow.cpp  mainwindow.h  orderedmap.cpp  pe_data_directory_parser.cpp  pe_data_directory_parser.h  pe_data_model.cpp  pe_data_model.h  pe_error_handler.cpp  pe_error_handler.h  pe_import_export_parser.cpp  pe_import_export_parser.h  pe_parser_new.cpp  pe_parser_new.h  pe_security_analyzer.cpp  pe_security_analyzer.h  pe_structures.h  pe_ui_manager.cpp  pe_ui_manager.h  pe_ui_presenter.h  pe_utils.cpp  pe_utils.h  security_config_manager.cpp  security_config_manager.h  version.h
tests/: CMakeLists.txt
tests/unit/: pe_data_model_test.cpp  pe_data_model_test.h  pe_parser_test.cpp  pe_parser_test.h  pe_security_analyzer_test.cpp  pe_security_analyzer_test.h  pe_utils_test.cpp  pe_utils_test.h  test_main.cpp
